--- a/Server/Views/index.html
+++ b/Server/Views/index.html
@@ -14,8 +14,8 @@
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nexus</title>
-    <script type="module" crossorigin src="/assets/index-qGjvUMwJ.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index-BBI7u2eE.css">
+    <script type="module" crossorigin src="/assets/index-77y_T1UG.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/index-BNuXMPib.css">
   </head>
   <body>
     <div id="root"></div>
