--- a/Server/Views/index.html
+++ b/Server/Views/index.html
@@ -14,10 +14,10 @@
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nexus</title>
-    <script type="module" crossorigin src="/assets/index-Cnb6njio.js"></script>
+    <script type="module" crossorigin src="/assets/index-CPp_gx_u.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/index-CTyjXDUg.css">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"></div>
   </body>
 </html>
